adin sidebar scrollbale and add servioces and hero shocase modal fix on mobile

--- a/app/admin/services/services.module.css
+++ b/app/admin/services/services.module.css
@@ -702,7 +702,8 @@
   }
 
   .modal {
-    max-height: 95vh;
+    max-height: 85vh;
+    margin: 20px 0;
   }
 
   .modalFooter {
